Prettify XML with BeautifulSoup

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -218,11 +218,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b216d1ef-9964-4f79-918d-409b344b752b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rec = csw.records['S2B_MSIL2A_20200905T092029_N0214_R093_T34SEJ_20200905T113748.SAFE']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0262024b-157c-4ad3-8074-17abb0ec9b8b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "csw.records['S2B_MSIL2A_20200905T092029_N0214_R093_T34SEJ_20200905T113748.SAFE'].title"
+    "rec.title"
    ]
   },
   {
@@ -232,7 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csw.records['S2B_MSIL2A_20200905T092029_N0214_R093_T34SEJ_20200905T113748.SAFE'].xml"
+    "rec.xml"
    ]
   },
   {
@@ -242,7 +252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csw.records['S2B_MSIL2A_20200905T092029_N0214_R093_T34SEJ_20200905T113748.SAFE'].references"
+    "rec.references"
    ]
   },
   {
@@ -253,7 +263,7 @@
    "outputs": [],
    "source": [
     "msg = 'geolink: {geolink}\\nscheme: {scheme}\\nURL: {url}\\n'.format\n",
-    "for ref in value.references:\n",
+    "for ref in rec.references:\n",
     "    print(msg(geolink=sniff_link(ref['url']), **ref))"
    ]
   },
@@ -264,7 +274,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for ref in value.references:\n",
+    "for ref in rec.references:\n",
     "    url = ref['url']\n",
     "    if 'WMS' in url:\n",
     "        print(msg(geolink=sniff_link(url), **ref))\n",
@@ -278,7 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for ref in value.references:\n",
+    "for ref in rec.references:\n",
     "    url = ref['url']\n",
     "    if 'WCS' in url:\n",
     "        print(msg(geolink=sniff_link(url), **ref))\n",
@@ -292,7 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"dataset bbox = (%s, %s, %s, %s)\" % (value.bbox.minx, value.bbox.miny, value.bbox.maxx, value.bbox.maxy))\n"
+    "print(\"dataset bbox = (%s, %s, %s, %s)\" % (rec.bbox.minx, rec.bbox.miny, rec.bbox.maxx, rec.bbox.maxy))\n"
    ]
   },
   {
@@ -378,21 +388,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0206306-afe9-46a3-ac62-c93907188966",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "workspace_federation_endpoint = 'https://resource-catalogue.user.185.52.193.87.nip.io/?service=CSW&version=2.0.2&request=GetCapabilities&distributedSearch=TRUE&hopcount=1'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "1499b0ed-5c40-446d-8939-c66810dc4be3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "csw = CatalogueServiceWeb(workspace_federation_endpoint,timeout=30)"
+    "csw = CatalogueServiceWeb(workspace_endpoint,timeout=30)"
    ]
   },
   {
@@ -481,7 +481,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests"
+    "import requests\n",
+    "from bs4 import BeautifulSoup"
    ]
   },
   {
@@ -517,17 +518,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "R = S.get(url=endpoint, params=PARAMS)"
+    "R = S.get(url=endpoint, params=PARAMS)\n",
+    "bs = BeautifulSoup(R.text, 'xml')\n",
+    "print(bs.prettify())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "999aeb48-373a-4ccb-9066-a2e8011d1fca",
+   "id": "e17b7bc4-1220-43c1-a11a-62639ea32136",
    "metadata": {},
    "outputs": [],
    "source": [
-    "R.text"
+    "url='https://resource-catalogue.185.52.193.87.nip.io/?mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&elementsetname=full&resulttype=results&typenames=csw:Record'\n",
+    "R = S.get(url=url)\n",
+    "bs = BeautifulSoup(R.text, 'xml')\n",
+    "print(bs.prettify())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7e61ee8-062f-486e-9363-7b3aa5465226",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url='https://resource-catalogue.user.185.52.193.87.nip.io/?mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&elementsetname=full&resulttype=results&typenames=csw:Record'\n",
+    "R = S.get(url=url)\n",
+    "bs = BeautifulSoup(R.text, 'xml')\n",
+    "print(bs.prettify())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4b7bd1a-4f73-4ffe-bd18-ea11e2a2d18a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url='https://resource-catalogue.user.185.52.193.87.nip.io/?service=CSW&version=3.0.0&request=GetRecords&typenames=csw:Record&elementsetname=full&resulttype=results&distributedSearch=TRUE&hopcount=1'\n",
+    "R = S.get(url=url)\n",
+    "bs = BeautifulSoup(R.text, 'xml')\n",
+    "print(bs.prettify())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdaf542d-a7f3-46ec-af30-edd908fe3822",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url='https://resource-catalogue.185.52.193.87.nip.io/?mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&elementsetname=full&resulttype=results&typenames=csw:Record&eo:parentIdentifier=S2MSI2A'\n",
+    "R = S.get(url=url)\n",
+    "bs = BeautifulSoup(R.text, 'xml')\n",
+    "print(bs.prettify())"
    ]
   }
  ],
