Show record bbox on map

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -17,7 +17,8 @@
    "source": [
     "from owslib.csw import CatalogueServiceWeb\n",
     "from geolinks import sniff_link\n",
-    "from owslib.fes import PropertyIsEqualTo, PropertyIsLike, BBox, SortBy, SortProperty"
+    "from owslib.fes import PropertyIsEqualTo, PropertyIsLike, BBox, SortBy, SortProperty\n",
+    "import folium"
    ]
   },
   {
@@ -302,7 +303,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"dataset bbox = (%s, %s, %s, %s)\" % (rec.bbox.minx, rec.bbox.miny, rec.bbox.maxx, rec.bbox.maxy))\n"
+    "print(\"dataset bbox = (%s, %s, %s, %s)\" % (rec.bbox.minx, rec.bbox.miny, rec.bbox.maxx, rec.bbox.maxy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fda96d60-2356-4d45-bceb-583e93fad5b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = folium.Map(location=[38, 24], zoom_start=6, tiles='OpenStreetMap')\n",
+    "folium.Rectangle(bounds=[[float(rec.bbox.miny), float(rec.bbox.minx)], [float(rec.bbox.maxy), float(rec.bbox.maxx)]]).add_to(m)\n",
+    "m"
    ]
   },
   {
