Re-arange titles

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -392,39 +392,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f8cc3f0-bb09-4416-8071-6ed8c7ed7934",
-   "metadata": {},
-   "source": [
-    "### Federated Search"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1499b0ed-5c40-446d-8939-c66810dc4be3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "csw = CatalogueServiceWeb(workspace_endpoint,timeout=30)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f80e2635-c70d-46bb-bd86-248a476b43db",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "csw.getrecords2(maxrecords=20)\n",
-    "csw.results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "d25d53cf-efb4-4f8e-acf0-14ac63d0de00",
    "metadata": {},
    "source": [
-    "### OpenSearch demo"
+    "### OpenSearch"
    ]
   },
   {
@@ -511,27 +482,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07cea2d0-16a9-4c38-a4f8-bbeed710cf40",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "PARAMS = {\n",
-    "    \"action\": \"opensearch\",\n",
-    "    \"namespace\": \"0\",\n",
-    "    \"search\": \"Hampi\",\n",
-    "    \"limit\": \"5\",\n",
-    "    \"format\": \"json\"\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "23fc3f20-75fb-4acf-9ff3-b00df47ed234",
    "metadata": {},
    "outputs": [],
    "source": [
-    "R = S.get(url=endpoint, params=PARAMS)\n",
+    "R = S.get(url=endpoint)\n",
     "bs = BeautifulSoup(R.text, 'xml')\n",
     "print(bs.prettify())"
    ]
@@ -563,6 +518,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1fb640c7-4a64-40e7-9d05-7af7dfb84543",
+   "metadata": {},
+   "source": [
+    "## Federated Search"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f4b7bd1a-4f73-4ffe-bd18-ea11e2a2d18a",
@@ -573,6 +536,14 @@
     "R = S.get(url=url)\n",
     "bs = BeautifulSoup(R.text, 'xml')\n",
     "print(bs.prettify())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a86aaea4-8f47-4061-8817-68de1e126353",
+   "metadata": {},
+   "source": [
+    "## Collections Search"
    ]
   },
   {
