Distributed search and opensearch fixes

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -76,7 +76,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csw.getdomain('GetRecords.resultType')"
+    "csw.getdomain('GetRecords.resultType')\n",
+    "csw.results"
    ]
   },
   {
@@ -392,6 +393,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eac13ecc-e325-464c-9da8-d4466ef1a014",
+   "metadata": {},
+   "source": [
+    "#### Distributed Search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37806ccf-1450-47d3-ad97-94e5b17d8641",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this needs OWSLib master with https://github.com/geopython/OWSLib/pull/771\n",
+    "# problem exists\n",
+    "csw.getrecords2(maxrecords=20, distributedsearch=True)\n",
+    "csw.results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d25d53cf-efb4-4f8e-acf0-14ac63d0de00",
    "metadata": {},
    "source": [
@@ -435,7 +457,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_results = client.search()"
+    "results = client.search()\n",
+    "len(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d421e192-0c2b-44bb-8d39-c90200f01cd3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = client.search(params={\"{eo:parentIdentifier?}\": {\"value\": \"S2MSI2A\"}})\n",
+    "len(results)"
    ]
   },
   {
