Adding catalogue discovery example with time start/end, cloud coverage and bbox

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "from owslib.csw import CatalogueServiceWeb\n",
     "from geolinks import sniff_link\n",
-    "from owslib.fes import PropertyIsEqualTo, PropertyIsLike, BBox, SortBy, SortProperty\n",
+    "from owslib.fes import And, Or, PropertyIsEqualTo, PropertyIsGreaterThanOrEqualTo, PropertyIsLessThanOrEqualTo, PropertyIsLike, BBox, SortBy, SortProperty\n",
     "import folium"
    ]
   },
@@ -133,6 +133,86 @@
    "outputs": [],
    "source": [
     "bbox_query = BBox([23.37,37.69,24.14,38.40])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fec38a23-68fd-4c1f-9213-404859b048ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "begin = PropertyIsLessThanOrEqualTo(propertyname='apiso:TempExtent_begin', literal='2021-04-01 00:00')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d29f2a96-b2ed-446a-a4d3-9832f9af5e87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "end = PropertyIsLessThanOrEqualTo(propertyname='apiso:TempExtent_end', literal='2021-04-21 23:59')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a03b5d3-cad9-4da2-93ce-85c7ba8a6003",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cloud = PropertyIsLessThanOrEqualTo(propertyname='apiso:CloudCover', literal='20')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24c735c8-4e87-4d11-af65-12890b4a0c46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filter_list = [\n",
+    "    And(\n",
+    "        [\n",
+    "            bbox_query,  # bounding box\n",
+    "            begin, end,  # start and end date\n",
+    "            cloud        # cloud\n",
+    "        ]\n",
+    "    )\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c4c4ce0-7c42-4c0b-afac-7725ddbfa724",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csw.getrecords2(constraints=filter_list, outputschema='http://www.isotc211.org/2005/gmd')\n",
+    "csw.results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0554447-6129-48c9-a8d7-47790545968b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collection_query = PropertyIsEqualTo('apiso:ParentIdentifier', 'S2AL1C')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0da28f27-2a24-43d5-b843-f636ae802c5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csw.getrecords2(constraints=[collection_query], outputschema='http://www.isotc211.org/2005/gmd')\n",
+    "csw.results"
    ]
   },
   {
