--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -62,6 +62,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "81104595-78d4-4ff2-ba8a-5cb6a704de6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csw.version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "646dd77a-6f82-4a1f-9463-94bddb897175",
    "metadata": {},
    "outputs": [],
@@ -72,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f8c490f-58ff-46e0-9c80-3e7a62a77b56",
+   "id": "b72c7f69-6d87-4933-8032-f0065fb95f87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,20 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csw.get_operation_by_name('GetRecords').constraints\n",
-    "csw.results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b7f9ce2e-d743-4fdf-a02a-8fd12b9497c8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "csw.get_operation_by_name('GetDomain')\n",
-    "csw.getdomain('apiso:ServiceType', 'property')\n",
-    "print(csw.results['values'])"
+    "csw.get_operation_by_name('GetRecords').constraints"
    ]
   },
   {
@@ -132,7 +129,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bbox_query = BBox([23.37,37.69,24.14,38.40])"
+    "#bbox_query = BBox([23.37,37.69,24.14,38.40])\n",
+    "bbox_query = BBox([20.24, 38.76, 20.31, 39.0])"
    ]
   },
   {
@@ -201,7 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collection_query = PropertyIsEqualTo('apiso:ParentIdentifier', 'S2AL1C')"
+    "collection_query = PropertyIsEqualTo('apiso:ParentIdentifier', 'S2MSI1C')"
    ]
   },
   {
