A few extra comments

--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "palestinian-steps",
+   "id": "pursuant-permission",
    "metadata": {},
    "source": [
     "# Demonstration\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "spanish-annex",
+   "id": "whole-italian",
    "metadata": {},
    "source": [
     "## Application Development\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "champion-facing",
+   "id": "missing-hardwood",
    "metadata": {},
    "source": [
     "## Demo Client Setup\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "favorite-wallace",
+   "id": "israeli-static",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fluid-trail",
+   "id": "understanding-gamma",
    "metadata": {},
    "source": [
     "### Authenticated User\n",
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "robust-second",
+   "id": "hungry-morris",
    "metadata": {
     "tags": []
    },
@@ -77,14 +77,14 @@
     "#-------------------------------------------------------------------------------\n",
     "# Authenticate as user 'demoA' and get ID Token\n",
     "#-------------------------------------------------------------------------------\n",
-    "USER_NAME=\"demouser3\"\n",
+    "USER_NAME=\"demoA\"\n",
     "USER_PASSWORD=\"defaultPWD\"\n",
     "user_id_token = demo.get_id_token(USER_NAME, USER_PASSWORD)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "raised-ebony",
+   "id": "blond-boulder",
    "metadata": {},
    "source": [
     "## Data Discovery\n",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "nonprofit-bookmark",
+   "id": "healthy-optimization",
    "metadata": {},
    "source": [
     "### Resource Catalogue - OpenSearch"
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "nasty-spokesman",
+   "id": "ordered-heath",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "equal-favorite",
+   "id": "adolescent-document",
    "metadata": {},
    "source": [
     "### Data Access Services - WMS, WCS (TBD)"
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "precious-public",
+   "id": "considerable-timeline",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "occupational-macro",
+   "id": "reduced-designation",
    "metadata": {},
    "source": [
     "## Processing - ADES\n",
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "parental-shopping",
+   "id": "widespread-investing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "micro-production",
+   "id": "british-minute",
    "metadata": {},
    "source": [
     "### ADES: List Processes\n",
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "middle-sydney",
+   "id": "retired-corner",
    "metadata": {
     "tags": []
    },
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "approximate-template",
+   "id": "dedicated-tokyo",
    "metadata": {},
    "source": [
     "### ADES: Deploy Application\n",
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "czech-technology",
+   "id": "chubby-queens",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "affected-summit",
+   "id": "early-abraham",
    "metadata": {},
    "source": [
     "**_Dynamic Resource Protection_**<br>\n",
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fifty-penetration",
+   "id": "received-attitude",
    "metadata": {
     "tags": []
    },
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unauthorized-cookie",
+   "id": "bearing-hamilton",
    "metadata": {},
    "source": [
     "### ADES: Get Application Details\n",
@@ -243,18 +243,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "copyrighted-trading",
+   "id": "cubic-census",
    "metadata": {},
    "outputs": [],
    "source": [
     "# API Processes - Get Application Details\n",
     "response, ades_access_token = demo.proc_get_app_details(ades_proc_url, app_name, id_token=user_id_token, access_token=ades_access_token)\n",
-    "print(json.dumps(response.json(), indent = 2))"
+    "demo.response_summary(response)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "agricultural-shuttle",
+   "id": "adequate-touch",
    "metadata": {},
    "source": [
     "### ADES: Execute Application\n",
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "disturbed-stroke",
+   "id": "royal-smooth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "conceptual-mouth",
+   "id": "chicken-obligation",
    "metadata": {},
    "source": [
     "### ADES: Job Status\n",
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "saving-attribute",
+   "id": "played-alliance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stunning-central",
+   "id": "found-albuquerque",
    "metadata": {},
    "source": [
     "**Polling for Job Completion**<br>\n",
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hazardous-controversy",
+   "id": "hindu-surfing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,16 +323,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "favorite-briefing",
+   "id": "polished-silence",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Inspect response\n",
     "demo.response_summary(response)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "assured-battery",
+   "id": "understood-cambridge",
    "metadata": {},
    "source": [
     "### ADES Stage-out\n",
@@ -342,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "uniform-australia",
+   "id": "amber-simple",
    "metadata": {},
    "source": [
     "### ADES: Job Result\n",
@@ -354,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "alpha-ebony",
+   "id": "hydraulic-country",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,16 +366,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "homeless-import",
+   "id": "typical-pursuit",
    "metadata": {},
    "source": [
-    "### ADES: List Jobs"
+    "### ADES: List Jobs\n",
+    "**GET {service_url}/processes/{application_name}/jobs**<br>\n",
+    "Provides a list of all jobs for the named processes "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "searching-stephen",
+   "id": "undefined-stylus",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,16 +388,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "senior-touch",
+   "id": "packed-product",
    "metadata": {},
    "source": [
-    "### ADES: Undeploy Application"
+    "### ADES: Undeploy Application\n",
+    "**DELETE {service_url}/processes/{application_name}**<br>\n",
+    "Undeploy application from the ADES"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "grand-palestine",
+   "id": "elect-tonight",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "reliable-bleeding",
+   "id": "described-monaco",
    "metadata": {
     "tags": []
    },
@@ -418,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "promotional-border",
+   "id": "aerial-determination",
    "metadata": {},
    "source": [
     "## Workspace"
@@ -427,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ceramic-cooperative",
+   "id": "modern-terrorist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "finished-tongue",
+   "id": "similar-savannah",
    "metadata": {},
    "source": [
     "### Workspace: Get Details"
@@ -447,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "domestic-kansas",
+   "id": "naval-street",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +465,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "headed-calculator",
+   "id": "recent-collins",
    "metadata": {},
    "source": [
     "### Inspect S3 Bucket"
@@ -469,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "lovely-monitor",
+   "id": "abstract-choir",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "smart-wheel",
+   "id": "united-soviet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "governmental-allocation",
+   "id": "bored-visitor",
    "metadata": {},
    "source": [
     "## Results Consumption\n",
@@ -512,14 +517,6 @@
     "  * Data access services\n",
     "  * QGIS"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "colonial-kruger",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
