EOEPCA-340 #comment Added steps for Policy-based Access control

--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -423,7 +423,151 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aerial-determination",
+   "id": "412ba249-8e7f-49f4-a089-41ea163784d0",
+   "metadata": {},
+   "source": [
+    "## Policy Enforcement and Resource Sharing\n",
+    "Owners of resources can choose to share these with other users by updating the access policies"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25388954-ae16-4f64-b98a-222acc8433e4",
+   "metadata": {},
+   "source": [
+    "### Deploy Application\n",
+    "The demo user redeploys de application"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "220c052a-5f02-4c37-92e0-cbe9903d6e54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# API Processes - Deploy Application\n",
+    "response, ades_access_token = demo.proc_deploy_application(ades_proc_url, \"../data/app-deploy-body-atom.json\", id_token=user_id_token, access_token=ades_access_token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f493cda3-03c5-4342-9662-e58cf8682e20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check deploy - list processes again\n",
+    "response, process_ids, ades_access_token = demo.proc_list_processes(ades_proc_url, id_token=user_id_token, access_token=ades_access_token)\n",
+    "print(\"Processes:\", process_ids)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12ec647e-e7ae-412d-99b5-3a8252d5f184",
+   "metadata": {},
+   "source": [
+    "### UserB Authenticates in the Platform\n",
+    "User authenticates and the client receives an ID Token (JWT) that represents the user."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4a160de-a2aa-4bcd-90e0-ef8c9ee58e9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#-------------------------------------------------------------------------------\n",
+    "# Authenticate as UserB and get ID Token\n",
+    "#-------------------------------------------------------------------------------\n",
+    "USER_NAME=\"demoB\"\n",
+    "USER_PASSWORD=\"defaultPWD\"\n",
+    "userb_id_token = demo.get_id_token(USER_NAME, USER_PASSWORD)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "561964f7-548b-415a-92fd-d405f9af4b70",
+   "metadata": {},
+   "source": [
+    "### UserB Attempts to Execute Demo User Apps\n",
+    "All resources are registered with ownership policies by default"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ed21b21-bece-4ee3-90d3-78943904ad3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#-------------------------------------------------------------------------------\n",
+    "# Unauthorized Execution \n",
+    "# Expected Value: 401\n",
+    "#-------------------------------------------------------------------------------\n",
+    "response, ades_access_token, job_location_path = demo.proc_execute_application(ades_proc_url, app_name, \"../data/app-execute-body.json\", id_token=None, access_token=None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39955275-e95a-480a-b12f-0048b84ebed0",
+   "metadata": {},
+   "source": [
+    "### Owner Updates Access Policy\n",
+    "Grants access to UserB to execute the deployed app"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66f5a799-0fd5-4b8b-b6f4-9ca790328534",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#-------------------------------------------------------------------------------\n",
+    "# Get Ownership Id\n",
+    "#-------------------------------------------------------------------------------\n",
+    "owB = demo.get_ownership_id(userb_id_token)\n",
+    "owA = demo.get_ownership_id(user_id_token)\n",
+    "\n",
+    "#-------------------------------------------------------------------------------\n",
+    "# Finds the policy by retrieving a resource_id\n",
+    "# Update policy with allowing access to UserB\n",
+    "#-------------------------------------------------------------------------------\n",
+    "ades_res=\"http://ades.resources.185.52.193.87.nip.io\"\n",
+    "res_id = demo.get_resource_by_name(ades_res, \"s-expression-0_0_2\", user_id_token)\n",
+    "data={'name':'Updated Execution','description':'modified','config':{'resource_id':'res_id','action':'view','rules':[{'OR':[{'EQUAL':{'id':'owA'}},{'EQUAL':{'id':'owB'}}]}]},'scopes':['protected_access']}\n",
+    "pdp_url= \"http://test.185.52.193.87.nip.io/pdp\"\n",
+    "resp, text= demo.update_policy(pdp_url, data, res_id, user_id_token)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc9d1944-34a9-4ad0-9c5b-ab78f27395ea",
+   "metadata": {},
+   "source": [
+    "### UserB Executes Application Succesfully\n",
+    "Shared resources can now be executed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f556b987-6165-4005-861b-e306bf060f6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#-------------------------------------------------------------------------------\n",
+    "# User B Execute Application Succesfully\n",
+    "# Expected Value: 201\n",
+    "#-------------------------------------------------------------------------------\n",
+    "response, ades_access_token, job_location_path = demo.proc_execute_application(ades_proc_url, app_name, \"../data/app-execute-body.json\", id_token=userb_id_token, access_token=None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a56a0a2-58c8-4f21-a342-a67d25e55ce4",
    "metadata": {},
    "source": [
     "## Workspace"
