Fix bbox for the demo

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -129,8 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#bbox_query = BBox([23.37,37.69,24.14,38.40])\n",
-    "bbox_query = BBox([20.24, 38.76, 20.31, 39.0])"
+    "bbox_query = BBox([37.8, 23.4, 38.8, 24.5])"
    ]
   },
   {
@@ -292,7 +291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csw.getrecordbyid(id=['S2B_MSIL2A_20200905T092029_N0214_R093_T34SEJ_20200905T113748.SAFE'])"
+    "csw.getrecordbyid(id=['S2B_MSIL2A_20200902T090559_N0214_R050_T34SGH_20200902T113910.SAFE'])"
    ]
   },
   {
@@ -302,7 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rec = csw.records['S2B_MSIL2A_20200905T092029_N0214_R093_T34SEJ_20200905T113748.SAFE']"
+    "rec = csw.records['S2B_MSIL2A_20200902T090559_N0214_R050_T34SGH_20200902T113910.SAFE']"
    ]
   },
   {
@@ -382,7 +381,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"dataset bbox = (%s, %s, %s, %s)\" % (rec.bbox.minx, rec.bbox.miny, rec.bbox.maxx, rec.bbox.maxy))"
+    "print(\"dataset bbox = (%s, %s, %s, %s)\" % (rec.bbox.miny, rec.bbox.minx, rec.bbox.maxy, rec.bbox.maxx))"
    ]
   },
   {
