Forgot opensearch parameter

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -623,7 +623,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url='https://resource-catalogue.user.185.52.193.87.nip.io/?service=CSW&version=3.0.0&request=GetRecords&typenames=csw:Record&elementsetname=full&resulttype=results&distributedSearch=TRUE&hopcount=1'\n",
+    "url='https://resource-catalogue.user.185.52.193.87.nip.io/?mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&typenames=csw:Record&elementsetname=full&resulttype=results&distributedSearch=TRUE&hopcount=1'\n",
     "R = S.get(url=url)\n",
     "bs = BeautifulSoup(R.text, 'xml')\n",
     "print(bs.prettify())"
