--- a/demoroot/notebooks/05 Data Access.ipynb
+++ b/demoroot/notebooks/05 Data Access.ipynb
@@ -8,7 +8,8 @@
    "outputs": [],
    "source": [
     "from owslib.csw import CatalogueServiceWeb\n",
-    "from owslib.wms import WebMapService"
+    "from owslib.wms import WebMapService\n",
+    "from owslib.wcs import WebCoverageService"
    ]
   },
   {
@@ -38,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csw.getrecordbyid(id=['S2B_MSIL2A_20200905T092029_N0214_R093_T34SEJ_20200905T113748.SAFE'])"
+    "csw.getrecordbyid(id=['S2B_MSIL2A_20200902T090559_N0214_R050_T34SGH_20200902T113910.SAFE'])"
    ]
   },
   {
@@ -48,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "links = csw.records['S2B_MSIL2A_20200905T092029_N0214_R093_T34SEJ_20200905T113748.SAFE'].references"
+    "links = csw.records['S2B_MSIL2A_20200902T090559_N0214_R050_T34SGH_20200902T113910.SAFE'].references"
    ]
   },
   {
@@ -63,24 +64,6 @@
     "    if 'WMS' in scheme:\n",
     "        wms_endpoint=link['url']\n",
     "        print(link['url'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "badb5045-91d1-404d-a28c-8ab331490697",
-   "metadata": {},
-   "source": [
-    "TODO: Fix the WMS endpoint"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "51ef01ba-566a-4b76-aa0d-b7d95f644f3f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wms_endpoint='https://data-access.185.52.193.87.nip.io/ows?service=WMS&version=1.3.0&request=GetCapabilities'"
    ]
   },
   {
@@ -110,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wms['S2L2A'].title"
+    "wms['S2B_MSIL2A_20200902T090559_N0214_R050_T34SGH_20200902T113910.SAFE__TRUE_COLOR'].title"
    ]
   },
   {
@@ -120,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wms['S2L2A'].boundingBoxWGS84"
+    "wms['S2B_MSIL2A_20200902T090559_N0214_R050_T34SGH_20200902T113910.SAFE__TRUE_COLOR'].boundingBoxWGS84"
    ]
   },
   {
@@ -140,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wms['S2L2A'].styles"
+    "wms['S2B_MSIL2A_20200902T090559_N0214_R050_T34SGH_20200902T113910.SAFE__TRUE_COLOR'].styles"
    ]
   },
   {
@@ -156,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b443a93-84ba-4a4b-83b7-91cdb9dfdec2",
+   "id": "96523864-81cb-4ce8-a4d2-d8b23b632b3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,8 +148,7 @@
     "import matplotlib.image as mpimg\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "wms = WebMapService('http://apps.ecmwf.int/wms/?token=public', version='1.3.0')\n",
-    "def getMap(layerName,bbox,filename):\n",
+    "def getMap(wms,layerName,bbox,filename):\n",
     "    wms.getOperationByName('GetMap').formatOptions\n",
     "    img = wms.getmap(layers=[layerName],\n",
     "                 size=(600,300),\n",
@@ -177,12 +159,34 @@
     "\n",
     "    tmpfile = open(filename,'wb')\n",
     "    tmpfile.write(img.read())\n",
-    "    tmpfile.close()\n",
-    "getMap('foreground',(-180,-90,180,90), 'foreground.png')\n",
-    "getMap('background',(-180,-90,180,90), 'background.png')\n",
-    "getMap('composition_bbaod550',(-180,-90,180,90), 'bbaod550.png')\n",
-    "\n",
-    "\n",
+    "    tmpfile.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4dc25083-e659-4688-a635-3be51d25a742",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "getMap(wms,'S2B_MSIL2A_20200902T090559_N0214_R050_T34SGH_20200902T113910.SAFE__TRUE_COLOR',(23.4,37.8,24.5,38.8), 'rgb.png')\n",
+    "image1=mpimg.imread('rgb.png')\n",
+    "fig = plt.figure(figsize=(12,7))\n",
+    "img1=plt.imshow(image1,extent=[23.4,24.5,37.8,38.8],aspect='auto')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b443a93-84ba-4a4b-83b7-91cdb9dfdec2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wms2 = WebMapService('http://apps.ecmwf.int/wms/?token=public', version='1.3.0')\n",
+    "getMap(wms2,'foreground',(-180,-90,180,90), 'foreground.png')\n",
+    "getMap(wms2,'background',(-180,-90,180,90), 'background.png')\n",
+    "getMap(wms2,'composition_bbaod550',(-180,-90,180,90), 'bbaod550.png')\n",
     "image1=mpimg.imread('background.png')\n",
     "image2=mpimg.imread('bbaod550.png')\n",
     "image3=mpimg.imread('foreground.png')\n",
@@ -222,7 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = folium.Map(location=[41, -70], zoom_start=5, tiles=None)\n",
+    "m = folium.Map(location=[38, 24], zoom_start=6, tiles=None)\n",
     "\n",
     "\n",
     "folium.raster_layers.TileLayer(\n",
@@ -235,35 +239,12 @@
     "    control=True,\n",
     ").add_to(m)\n",
     "\n",
-    "folium.raster_layers.TileLayer(\n",
-    "    tiles='http://{s}.google.com/vt/lyrs=m&x={x}&y={y}&z={z}',\n",
-    "    attr='google',\n",
-    "    name='google street view',\n",
-    "    max_zoom=20,\n",
-    "    subdomains=['mt0', 'mt1', 'mt2', 'mt3'],\n",
-    "    overlay=False,\n",
-    "    control=True,\n",
-    ").add_to(m)\n",
-    "\n",
-    "\n",
     "folium.raster_layers.WmsTileLayer(\n",
-    "    url='https://demo.boundlessgeo.com/geoserver/ows?',\n",
-    "    layers='nasa:bluemarble',\n",
-    "    name='bluemarble',\n",
+    "    url=wms_endpoint,\n",
+    "    layers='S2B_MSIL2A_20200902T090559_N0214_R050_T34SGH_20200902T113910.SAFE__TRUE_COLOR',\n",
+    "    name='S2B_MSIL2A_20200902T090559_N0214_R050_T34SGH_20200902T113910.SAFE__TRUE_COLOR',\n",
     "    fmt='image/png',\n",
     "    overlay=False,\n",
-    "    control=True,\n",
-    ").add_to(m)\n",
-    "\n",
-    "\n",
-    "folium.raster_layers.WmsTileLayer(\n",
-    "    url='http://mesonet.agron.iastate.edu/cgi-bin/wms/nexrad/n0r.cgi',\n",
-    "    name='test',\n",
-    "    fmt='image/png',\n",
-    "    layers='nexrad-n0r-900913',\n",
-    "    attr=u'Weather data © 2012 IEM Nexrad',\n",
-    "    transparent=True,\n",
-    "    overlay=True,\n",
     "    control=True,\n",
     ").add_to(m)\n",
     "\n",
@@ -288,7 +269,23 @@
    "id": "70f48f6f-0ba6-4c62-aeea-c38dc99268c9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for link in links:\n",
+    "    scheme = link['scheme']\n",
+    "    if 'WCS' in scheme:\n",
+    "        wcs_endpoint=link['url']\n",
+    "        print(link['url'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1e795d5-eecd-4617-a0b8-97e39a99405c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wcs = WebCoverageService(wcs_endpoint, version='2.0.1')"
+   ]
   }
  ],
  "metadata": {
