--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -469,23 +469,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "eac13ecc-e325-464c-9da8-d4466ef1a014",
-   "metadata": {},
-   "source": [
-    "#### Distributed Search"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "37806ccf-1450-47d3-ad97-94e5b17d8641",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# this needs OWSLib master with https://github.com/geopython/OWSLib/pull/771\n",
-    "# problem exists\n",
-    "csw.getrecords2(maxrecords=20, distributedsearch=True)\n",
+    "csw.getrecords2(maxrecords=20, distributedsearch=True, hopcount=1)\n",
     "csw.results"
    ]
   },
