Fixed WCS base url

--- a/demoroot/notebooks/05 Data Access.ipynb
+++ b/demoroot/notebooks/05 Data Access.ipynb
@@ -273,7 +273,8 @@
     "for link in links:\n",
     "    scheme = link['scheme']\n",
     "    if 'WCS' in scheme:\n",
-    "        wcs_endpoint=link['url']\n",
+    "        wcs_endpoint=link['url'].split('?')[0]\n",
+    "        wcs_id=link['url'].split('eoid=')[1]\n",
     "        print(link['url'])"
    ]
   },
@@ -285,6 +286,16 @@
    "outputs": [],
    "source": [
     "wcs = WebCoverageService(wcs_endpoint, version='2.0.1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5a54b99-e1b6-46c3-be55-02f28b7a30a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wcs.contents.keys()"
    ]
   }
  ],
